# SkillsEvalFlow

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
Docs/: ADR_Skill_Evaluation_Pipeline_and_Harbor_Execution_Strategy.txt  ab_testing_generalization_plan.md  failure_handling.md  harbor_fork_requirements.md  harbor_openshift_backend.md  implementation_plan.md  infrastructure_ops.md  results_persistence_and_observability_plan.md  trigger_guide.md  trigger_models_and_experiment_types.md
abevalflow/: experiment.py  report.py  schemas.py
abevalflow/db/: __init__.py  engine.py  models.py  observer.py
config/: rbac.yaml
config/litellm/: configmap.yaml  deployment.yaml  secret_template.yaml  service.yaml  serviceaccount.yaml
config/postgres/: secret.yaml  service.yaml  statefulset.yaml
config/security/: network_policy_default_deny.yaml  network_policy_direct_api.yaml  network_policy_litellm.yaml  network_policy_self_hosted.yaml  pod_security_reference.yaml  resource_quota.yaml
config/storage/: cleanup_cronjob.yaml  dead_letter_pvc.yaml  workspace_pvc.yaml
pipeline/: pipeline.yaml
pipeline/tasks/: analyze-report.yaml  build-push.yaml  git_clone.yaml  harbor-eval.yaml  (+3 more)
scripts/: analyze.py  cleanup.sh  generate_eval_config.py  query_results.py  scaffold.py  store_results.py  validate.py
skillsevalflow/: schemas.py
templates/: Dockerfile.j2  task.toml.j2
tests/: test_analyze.py  test_db_models.py  test_experiment.py  test_generate_eval_config.py  test_query_results.py  test_scaffold.py  test_store_results.py  test_validate.py
(+4 files in other folders)
